# client-timesheet-app

./: .dockerignore  .trivyignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_DOCUMENT.md  MIGRATION_PLAN_CPP.html  MIGRATION_PLAN_CPP.md  PR#130.txt  PROJECT_SUMMARY.md  RBT_PHASE1_CLASSIFICATION.md  README.md  REMEDIATION_FRAMEWORK.md  bloomingdales-site-features-rag-context.md  docker-compose.yml  macys-ios-app-features-rag-context.md  macys-site-features-rag-context.md  sonar-project.properties
.devin/: requirements.md
backend/: .env.example  .gitignore  COVERAGE_ILLUSTRATION.md  DEPLOYMENT.md  MISSING_TEST_CASES_REPORT.md  README.md  TESTING_SUMMARY.md  TESTS_COMPLETE.md  TEST_COVERAGE_GAP_REPORT.md  TEST_COVERAGE_REPORT.md  eslint.config.js  jest.config.js  package-lock.json  package.json  test-results.txt
backend-java/: .gitignore  README.md  pom.xml
customer-microservice/: package-lock.json  package.json
docker/: Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  SOP-COMMON-ERRORS.md  USER_GUIDE.md
e2e/: .eslintrc.js  .gitignore  README.md  cucumber.js  jest.config.js  package-lock.json  package.json  setup.js
e2e-tests/: .gitignore  README.md  package-lock.json  package.json  wdio.conf.js
frontend/: CHANGES.md  angular.json  eslint.config.js  index.html  jest.config.cjs  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
infrastructure/: README.md  docker-compose.production.yml
nextjs-frontend/: package-lock.json  package.json
order-management-system/: pom.xml
order-management-ui/: index.html  package-lock.json  package.json
pdf-pii-anonymizer/: README.md  pyproject.toml  requirements.txt
pdf-pii-anonymizer/src/pdf_pii_anonymizer/: __init__.py  anonymizer.py  cli.py  custom_recognizers.py  detector.py  ocr.py  pdf_generator.py  pii_types.py
pdf-pii-anonymizer/tests/: __init__.py  test_anonymizer.py  test_custom_recognizers.py  test_detector.py  test_ocr.py  test_pdf_generator.py  test_pii_types.py
presentations/: Devin_AI_Presentation.pptx  presentation.html
qt-system-monitor/: SystemMonitor.pro  lint-report.md  main.cpp  mainwindow.cpp  mainwindow.h
reports/: 01-rcrcr-classification-matrix.md  (+4 more)
(+494 files in other folders)
